--- a/main.css
+++ b/main.css
@@ -17,10 +17,18 @@
   color: white;
 }
 
-.navbar-brand {
+.navbar-toggler {
+  background-color: #ffe6e6;
+}
+
+.section-title {
   font-family: "Lobster", cursive;
 }
 
-.navbar-toggler {
-  background-color: white;
+.section-title span {
+  color: tomato;
+}
+
+#sobre__o__restaurante {
+  background-color: #ffe6e6;
 }
