--- a/main.css
+++ b/main.css
@@ -39,11 +39,21 @@
   color: tomato;
 }
 
-.nav-cardapio .nav-link.active {
+.nav-cardapio .nav-link.active,
+#fale__conosco button {
   background-color: tomato;
   color: white;
 }
 
 .nav-cardapio .nav-link:hover {
   color: tomato;
+}
+
+.social-links li {
+  list-style: none;
+  display: inline;
+}
+
+.social-links a {
+  text-decoration: none;
 }
